# AI_CAMP_REPORT

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  APPLICATION_MEMO.md  CLAUDE.md  ERROR_HANDLING.md  HARNESS.md  HARNESS_RUBRIC_INTEGRATION.md  PROJECT_STATUS.md  README.md  RUBRIC_CHECKLIST.md  SKILLS_README.md  SOUL.md  VERIFICATION_RULES.md  app.py  crawler.py  create_issues.sh  dashboard.html  error_handler.py  harness.py  history.py  pytest.ini  railway.toml  requirements.txt  rubric_validator.py  setup.cfg  setup_harness.bat  setup_harness.sh  test_doc_optimizer.py  test_issue_runner.py  test_issue_write.py  test_task_runner.py
.claude/agents/: data_collector.md  verifier.md
.claude/skills/doc_optimizer/: SKILL.md
.claude/skills/issue_write/: SKILL.md
.github/workflows/: ci.yml
android-app/: settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/steeldashboard/app/: MainActivity.java
skills/doc_optimizer/: SKILL.md
skills/issue_runner/: SKILL.md
skills/task_runner/: SKILL.md
templates/: index.html
tests/: test_app.py  test_crawler.py  test_error_handler.py
