[metadata]
name = steel-industry-dashboard
version = 1.0.0
description = 철강산업 정보 자동수집 대시보드
author = Steel Sales Team
author_email = seosale2@dsr.com
url = https://github.com/jeenu1027-sudo/AI_CAMP_REPORT

[options]
packages = find:
python_requires = >=3.8

[isort]
profile = black
line_length = 100
multi_line_mode = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = migrations,venv,.venv

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
check_untyped_defs = False
